--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -71,23 +71,13 @@ jobs:
         run: |
           pwsh -Command "
             \$ErrorActionPreference = 'Stop'
-            \$errors = Invoke-ScriptAnalyzer -Path . -Recurse -IncludeDefaultRules -Severity Error | Where-Object { \$_.ScriptPath -like '*.ps1' }
-            \$warnings = Invoke-ScriptAnalyzer -Path . -Recurse -IncludeDefaultRules -Severity Warning | Where-Object { \$_.ScriptPath -like '*.ps1' }
-            
-            if (\$errors) {
-              Write-Host '❌ PSScriptAnalyzer found ERRORS:' -ForegroundColor Red
-              \$errors | Format-Table -AutoSize
-              Write-Error 'PSScriptAnalyzer found errors that must be fixed'
+            \$results = Invoke-ScriptAnalyzer -Path . -Recurse -IncludeDefaultRules -Severity Error,Warning | Where-Object { \$_.ScriptPath -like '*.ps1' }
+            if (\$results) {
+              \$results | Format-Table -AutoSize
+              Write-Error 'PSScriptAnalyzer found issues'
               exit 1
             }
-            
-            if (\$warnings) {
-              Write-Host '⚠️  PSScriptAnalyzer found WARNINGS (non-blocking):' -ForegroundColor Yellow
-              Write-Host \"Total warnings: \$(\$warnings.Count)\"
-              Write-Host 'These are style suggestions and do not block the build.'
-            }
-            
-            Write-Host '✅ PSScriptAnalyzer passed with zero errors' -ForegroundColor Green
+            Write-Host '✅ PSScriptAnalyzer passed with zero errors/warnings'
           "
 
   file-quality:
