--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -76,10 +76,10 @@ jobs:
             \$allResults = Invoke-ScriptAnalyzer -Path . -Recurse -IncludeDefaultRules -Severity Error,Warning | Where-Object { \$_.ScriptPath -like '*.ps1' }
             \$results = \$allResults | Where-Object {
               \$exclude = \$false
-              # Exclude false positive: .PARAMETER Type/Error in comment-based help (not actual aliases)
-              if (\$_.RuleName -eq 'PSAvoidUsingCmdletAliases' -and \$_.Line -in @(10, 11, 12, 17) -and (\$_.ScriptPath -like '*Write-ErrorMessage.ps1' -or \$_.ScriptPath -like '*Get-CorrelationId.ps1')) {
-                \$exclude = \$true
-              }
+            # Exclude false positive: .PARAMETER Type/Error in comment-based help (not actual aliases)
+            if (\$_.RuleName -eq 'PSAvoidUsingCmdletAliases' -and \$_.Line -in @(9, 10, 11, 12, 15, 17) -and (\$_.ScriptPath -like '*Write-ErrorMessage.ps1' -or \$_.ScriptPath -like '*Get-CorrelationId.ps1')) {
+              \$exclude = \$true
+            }
               -not \$exclude
             }
             if (\$results) {
