--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -164,10 +164,126 @@ jobs:
           fi
           echo "✅ EUCORA branding present"
 
+  backend-tests:
+    name: Backend Tests & Coverage
+    runs-on: ubuntu-latest
+    
+    services:
+      postgres:
+        image: postgres:17-alpine
+        env:
+          POSTGRES_DB: eucora_test
+          POSTGRES_USER: eucora_user
+          POSTGRES_PASSWORD: test_password
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 5432:5432
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.12'
+          cache: 'pip'
+
+      - name: Install dependencies
+        run: |
+          pip install --upgrade pip
+          pip install -r backend/requirements/development.txt
+
+      - name: Run pytest with coverage
+        env:
+          POSTGRES_DB: eucora_test
+          POSTGRES_USER: eucora_user
+          POSTGRES_PASSWORD: test_password
+          POSTGRES_HOST: localhost
+          POSTGRES_PORT: 5432
+          DJANGO_SETTINGS_MODULE: config.settings.development
+          DEBUG: 'False'
+        run: |
+          cd backend
+          pytest --cov=apps --cov-report=xml --cov-report=term --cov-fail-under=90 -v
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v4
+        with:
+          file: ./backend/coverage.xml
+          flags: backend
+          name: backend-coverage
+
+  frontend-lint:
+    name: Frontend Linting
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: frontend/package-lock.json
+
+      - name: Install dependencies
+        run: |
+          cd frontend
+          npm ci
+
+      - name: Run ESLint
+        run: |
+          cd frontend
+          npm run lint
+
+      - name: Check TypeScript compilation
+        run: |
+          cd frontend
+          npm run build
+
+  frontend-tests:
+    name: Frontend Tests & Coverage
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: frontend/package-lock.json
+
+      - name: Install dependencies
+        run: |
+          cd frontend
+          npm ci
+
+      - name: Run tests with coverage
+        run: |
+          cd frontend
+          npm run test:ci
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v4
+        with:
+          file: ./frontend/coverage/coverage-final.json
+          flags: frontend
+          name: frontend-coverage
+
   summary:
     name: Quality Summary
     runs-on: ubuntu-latest
-    needs: [spdx-compliance, powershell-lint, file-quality, branding-compliance]
+    needs: [spdx-compliance, powershell-lint, file-quality, branding-compliance, backend-tests, frontend-lint, frontend-tests]
     
     steps:
       - name: Report Success
@@ -177,3 +293,6 @@ jobs:
           echo "✅ PowerShell Linting"
           echo "✅ File Quality"
           echo "✅ Branding Compliance"
+          echo "✅ Backend Tests (≥90% coverage)"
+          echo "✅ Frontend Linting"
+          echo "✅ Frontend Tests (≥90% coverage)"
