--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -45,6 +45,40 @@ repos:
         pass_filenames: false
         verbose: true
 
+  # Python code formatting
+  - repo: https://github.com/psf/black
+    rev: 25.1.0
+    hooks:
+      - id: black
+        language_version: python3.12
+        args: ['--line-length=120']
+        files: ^backend/
+
+  # Python linting
+  - repo: https://github.com/pycqa/flake8
+    rev: 7.2.0
+    hooks:
+      - id: flake8
+        args: ['--max-line-length=120', '--extend-ignore=E203,W503', '--max-complexity=10']
+        files: ^backend/
+
+  # Python type checking
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v1.8.0
+    hooks:
+      - id: mypy
+        additional_dependencies: [django-stubs, types-redis, types-requests]
+        args: ['--ignore-missing-imports', '--no-strict-optional']
+        files: ^backend/
+
+  # Secrets detection
+  - repo: https://github.com/Yelp/detect-secrets
+    rev: v1.4.0
+    hooks:
+      - id: detect-secrets
+        args: ['--baseline', '.secrets.baseline']
+        exclude: package-lock.json
+
   # Prevent commits to main/master
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.5.0
@@ -55,6 +89,6 @@ repos:
 
 # Configuration
 default_language_version:
-  python: python3.10
+  python: python3.12
 
 fail_fast: false
