fix: Implement automatic Django migrations on container startup
- Add entrypoint.sh script that runs migrations before starting Django server
- Script waits for database to be ready before applying migrations
- Ensures migrations are applied on every container start/restart
- Makes migration handling automatic and permanent across rebuilds
- Solves the issue of missing migrations on fresh container deployments

This ensures the control plane never starts with unapplied migrations,
making the deployment process more robust and user-friendly.

--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -35,5 +35,10 @@ RUN pip install --upgrade pip && \
 # Copy project
 COPY . /app/
 
-# Run migrations and start server (overridden by docker-compose command)
+# Make entrypoint script executable and install psycopg2 for connection testing
+RUN chmod +x /app/entrypoint.sh && \
+    pip install psycopg2-binary
+
+# Set entrypoint to handle migrations automatically
+ENTRYPOINT ["/bin/bash", "/app/entrypoint.sh"]
 CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
