--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -23,10 +23,12 @@ services:
   redis:
     image: redis:7-alpine
     container_name: eucora-redis
+    command: redis-server /etc/redis/redis.conf
     ports:
       - "6379:6379"
     volumes:
       - redis_data:/data
+      - ./backend/redis/redis.conf:/etc/redis/redis.conf:ro
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       interval: 10s
@@ -86,6 +88,7 @@ services:
       - MINIO_SECRET_KEY=minioadmin
       - MINIO_USE_SSL=False
       - DEBUG=True
+      - OTEL_ENABLED=False
     stdin_open: true
     tty: true
 
@@ -117,6 +120,7 @@ services:
       - MINIO_ACCESS_KEY=minioadmin
       - MINIO_SECRET_KEY=minioadmin
       - DEBUG=True
+      - OTEL_ENABLED=False
     stdin_open: true
     tty: true
 
@@ -148,6 +152,7 @@ services:
       - MINIO_ACCESS_KEY=minioadmin
       - MINIO_SECRET_KEY=minioadmin
       - DEBUG=True
+      - OTEL_ENABLED=False
     stdin_open: true
     tty: true
 
